- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.15.4, 6.0.3
 - 
    iOS 14.4
 
- 
        
 - 
        bb30beb726 (qt/qtbase/dev) bb30beb726 (qt/tqtc-qtbase/dev) 7bc1fd1eae (qt/qtbase/6.2) b6cd2b8a4d (qt/qtbase/6.3) 7bc1fd1eae (qt/tqtc-qtbase/6.2) b6cd2b8a4d (qt/tqtc-qtbase/6.3) 9a3aa90214 (qt/tqtc-qtbase/5.15) b6cd2b8a4d (qt/tqtc-qtbase/6.3.0)
 
On iOS, an user can swipe down the native file dialog. 
However, once it's swiped, there's no way to show/open it again. 
Here's the code snapshot.
import QtQuick.Dialogs 1.3 // or import Qt.labs.platform 1.0 ApplicationWindow { id: window width: 400 height: 400 visible: true FileDialog { id: fileDialog visible: false title: "Select a Image" } Button { id: openButton anchors.centerIn: parent text: "Open" onClicked: fileDialog.visible = true } }
How to reproduce : 
Sample project ( qtbug93505.zip
 ) is attached.   
Press "Open" button to open the native dialog. 
When the dialog is shown, swipe it down.